# homework

./: .gitigore  README.md  pyproject.toml  test.py
src/: __init__.py  main.py  masks.py  processing.py  widget.py
